--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.14"
 dependencies = [
     "arxiv>=2.1.0",
+    "pymupdf>=1.23",
     "requests>=2.32.5",
     "rich>=14.3.2",
 ]
@@ -14,4 +15,11 @@ dependencies = [
 dev = [
     "pytest>=9.0.2",
     "ruff>=0.14.14",
+]
+
+[tool.pytest.ini_options]
+filterwarnings = [
+    "ignore:.*SwigPyPacked.*:DeprecationWarning",
+    "ignore:.*SwigPyObject.*:DeprecationWarning",
+    "ignore:.*swigvarlink.*:DeprecationWarning",
 ]
