--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "pymupdf>=1.23",
     "requests>=2.32.5",
     "rich>=14.3.2",
+    "tiktoken>=0.11.0",
 ]
 
 [dependency-groups]
