--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,11 @@ dependencies = [
     "requests>=2.32.5",
     "rich>=14.3.2",
     "tiktoken>=0.11.0",
+    "typer>=0.12.3",
 ]
+
+[project.scripts]
+arxiv-rag = "arxiv_rag.cli:app"
 
 [dependency-groups]
 dev = [
