Add Chroma indexing and inspection CLI

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "arxiv-rag"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.14"
+requires-python = ">=3.13"
 dependencies = [
     "arxiv>=2.1.0",
     "httpx[socks]>=0.28.1",
@@ -20,6 +20,11 @@ dependencies = [
 [project.scripts]
 arxiv-rag = "arxiv_rag.cli:app"
 
+[project.optional-dependencies]
+vector = [
+    "chromadb>=0.5.0; python_version < '3.14'",
+]
+
 [dependency-groups]
 dev = [
     "pytest>=9.0.2",
@@ -32,3 +37,4 @@ filterwarnings = [
     "ignore:.*SwigPyObject.*:DeprecationWarning",
     "ignore:.*swigvarlink.*:DeprecationWarning",
 ]
+
