--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,7 @@
+[build-system]
+requires = ["setuptools>=68", "wheel"]
+build-backend = "setuptools.build_meta"
+
 [project]
 name = "arxiv-rag"
 version = "0.1.0"
@@ -31,10 +35,16 @@ dev = [
     "ruff>=0.14.14",
 ]
 
+[tool.setuptools.packages.find]
+where = ["."]
+include = ["arxiv_rag*"]
+
+[tool.setuptools.package-data]
+arxiv_rag = ["prompts/*.txt"]
+
 [tool.pytest.ini_options]
 filterwarnings = [
     "ignore:.*SwigPyPacked.*:DeprecationWarning",
     "ignore:.*SwigPyObject.*:DeprecationWarning",
     "ignore:.*swigvarlink.*:DeprecationWarning",
 ]
-
